# proposal-array

./: CMakeLists.txt  LICENSE  Plots.ipynb  README.md
include/sampling/: AliasTable.hpp  BinaryTree.hpp  DynamicProposalArray.hpp  DynamicProposalArrayStar.hpp  LogCascade.hpp  ProposalArray.hpp  ScopedTimer.hpp
source/tests/: BenchmarkConstruction.cpp  BenchmarkDynamicConstant.cpp  BenchmarkDynamicIncreasing.cpp  BenchmarkDynamicSampling.cpp  BenchmarkDynamicUpdateTypes.cpp  BenchmarkInsertionRemoval.cpp  BenchmarkLogCascade.cpp  BenchmarkSampling.cpp  CMakeLists.txt  TestSampling.cpp
weighted_index/: Cargo.toml
weighted_index/src/: main.rs
